# BurningGround

./: .gitignore  README.md  ai.c  event_handle_manual.c  gameobj.h  image_load.c  makefile  map_load.h  meson.build  meson_options.txt
PDCursesSample/: ai.c  ai.h  event_handle.c  event_handle.h  gameobj.c  gameobj.h  image_load.c  image_load.h  local_region.c  local_region.h  magic_interface.c  magic_interface.h  main.c  map_load.c  map_load.h  shared_definition.c  shared_definition.h  trash.c  ui.c  ui.h
PDCursesSample/graphics/: Player.txt  bat.txt  grass.txt  htrahdis.txt  matrix.txt  mosquitoes.txt  mushrooms.txt  rabbit.txt  sludge.txt
PDCursesSample/maps/: forest.txt  hell.txt  platform.txt  test.txt  test2.txt  tutorial.txt
graphics/: Player.txt  bees.txt  birds.txt  durian.txt  eyeballs.txt  sludge.txt
include/: ai.h  cross_platform_bullshit.h  event_handle.h  game_object.h  image_load.h  local_region.h  magic_interface.h  map_load.h  shared_definition.h  ui.h
maps/: forest.txt  tutorial.txt
src/: ai.c  cross_platform_bullshit.c  event_handle.c  game_object.c  image_load.c  local_region.c  magic_interface.c  main.c  map_load.c  meson.build  shared_definition.c  test.c  ui.c
